Added functionality for distance measuring and IntegrationTest handling
By: Andreas, Philipp